--- a/PromptUniversity/PromptUniversity.csproj
+++ b/PromptUniversity/PromptUniversity.csproj
@@ -67,6 +67,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="default.html" />
+    <Content Include="StyleSheet.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
