--- a/.github/workflows/droplet-website.yml
+++ b/.github/workflows/droplet-website.yml
@@ -14,7 +14,7 @@ jobs:
               env:
                   SSH_PRIVATE_KEY: ${{ secrets.DROPLET_KEY_SECRET }}
                   ARGS: "-rlgoDzvc -i"
-                  SOURCE: "Pages/"
+                  SOURCE: "PromptUniversity/Pages/"
                   REMOTE_HOST: ${{ secrets.DROPLET_HOST_SECRET}}
                   REMOTE_USER: ${{ secrets.DROPLET_USERNAME_SECRET }}
                   TARGET: /var/www/promptuniversity.info
